# PronounceGoBE

./: .env.example  .gitignore  README.md  a.py  alembic.ini  main.py  pyproject.toml  utils.py
a/: __init__.py  add_to_db.py  clean_data_dict.py  clean_outliers.py  get_ipa.py
alembic/: env.py
alembic/versions/: 2024_10_05_2034-fc584283aa78_add_user_table.py  2024_10_06_1155-84208112414c_add_words_table.py  2024_10_16_1313-68c2bdb01ddd_add_lessons_table.py  2024_10_16_1318-f48479d1c910_add_lesson_sentence_table.py  2024_10_16_1321-f71ecf438fbc_add_lesson_words_table.py  2024_10_30_1340-9a37a14f9415_add_group_table.py  2024_10_30_1423-7e6bb0685f73_add_group_member_table.py  2024_11_23_1836-6d1d9e19dfe2_add_lesson_like_table.py  2024_11_26_2119-f70303c1cace_create_progress_table.py  2024_11_26_2120-f9d395e8a9c7_create_progress_word_table.py  2024_11_26_2121-7ccfd57b827f_create_progress_sentence_table.py  2024_12_02_1126-6d3298d40a7b_indexing_word_table.py  2024_12_05_1153-f3c1e4866dac_add_image_path.py  (+1 more)
api/v1/: api.py
api/v1/dependencies/: authentication.py
core/: config.py  exception.py  response.py
create_dictionary/: add_to_db.py  clean_data_dict.py  main.py
db/: database.py  database.sql
import_dictionary/: analysis_dict.py
models/: __init__.py  base.py  group.py  group_member.py  lesson.py  lesson_like.py  lesson_sentence.py  lesson_word.py  progress.py  progress_sentence.py  progress_word.py  user.py  word.py
schemas/: auth.py  group.py  learn.py  lesson.py  lesson_sentence.py  progress.py  progress_sentence.py  progress_word.py  user.py  word.py
(+49 files in other folders)
